--- a/UserPanel/Home/index.html
+++ b/UserPanel/Home/index.html
@@ -114,7 +114,7 @@
     <div class="container">
 
       <a  class="logo" style="padding: 0%;">
-        <img src="./assets/images/logos.png" width="200" height="100" alt="smit - Home" >
+        <img src="../../assets/images/logos.png" width="200" height="100" alt="smit - Home" >
       </a>
 
       <nav class="navbar" data-navbar>
