--- a/UserPanel/Order_Details/index.html
+++ b/UserPanel/Order_Details/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="../../favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    
+    <link rel="preload" as="image" href="./assets/images/hero-slider-1.jpg">
+    <link rel="preload" as="image" href="./assets/images/hero-slider-2.jpg">
+    <link rel="preload" as="image" href="./assets/images/hero-slider-3.jpg">
     <style>
         img{
             width: 100%;
