--- a/UserPanel/Add_to_Cart/index.html
+++ b/UserPanel/Add_to_Cart/index.html
@@ -84,20 +84,14 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <a href="../Home/index.html" class="navbar-link hover-underline active">
+            <a href="../Home/index.html" class="navbar-link hover-underline ">
               <div class="separator"></div>
 
               <span class="span">Home</span>
             </a>
           </li>
 
-          <!-- <li class="navbar-item">
-            <a href="#about" class="navbar-link hover-underline">
-              <div class="separator"></div>
-
-              <span class="span">About Us</span>
-            </a>
-          </li> -->
+         
 
           
           <li class="navbar-item">
@@ -110,7 +104,7 @@
 
 
           <li class="navbar-item">
-            <a href="../Add_to_Cart/index.html" class="navbar-link hover-underline">
+            <a href="../Add_to_Cart/index.html" class="navbar-link hover-underline active">
               <div class="separator"></div>
 
               <span class="span">Add to Cat</span>
