--- a/index.html
+++ b/index.html
@@ -267,18 +267,18 @@
         - #Categories
       -->
       <section class="section service bg-black-10 text-center" aria-label="service">
-        <div class="container">
+        <div class="container" >
 
           <p class="section-subtitle label-2">Flavors For Royalty</p>
 
           <h2 class="headline-1 section-title">We Offer Top Notch Categroies</h2>
 
-          <p class="section-text">
+          <!-- <p class="section-text">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry lorem Ipsum has been the industrys
             standard dummy text ever.
-          </p>
+          </p> -->
 
-          <ul class="grid-list" id="category_card">
+          <ul class="grid-list" id="category_card" >
             <li>
               <div class="service-card">
 
@@ -302,51 +302,9 @@
               </div>
             </li>
 
-            <li>
-              <div class="service-card">
+           
 
-                <a  class="has-before hover:shine">
-                  <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
-                    <img src="./assets/images/service-3.jpg" width="285" height="336" loading="lazy" alt="Drinks"
-                      class="img-cover">
-                  </figure>
-                </a>
-
-                <div class="card-content">
-
-                  <h3 class="title-4 card-title">
-                    <a >Drinks</a>
-                  </h3>
-
-                  <a  class="btn-text hover-underline label-2" data-bs-toggle="modal" data-bs-target="#exampleModal">View Menu</a>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li>
-              <div class="service-card">
-
-                <a  class="has-before hover:shine">
-                  <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
-                    <img src="./assets/images/service-3.jpg" width="285" height="336" loading="lazy" alt="Drinks"
-                      class="img-cover">
-                  </figure>
-                </a>
-
-                <div class="card-content">
-
-                  <h3 class="title-4 card-title">
-                    <a >Drinks</a>
-                  </h3>
-
-                  <a  class="btn-text hover-underline label-2" data-bs-toggle="modal" data-bs-target="#exampleModal">View Menu</a>
-
-                </div>
-
-              </div>
-            </li>
+            
           </ul>
 
           <img src="./assets/images/shape-1.png" width="246" height="412" loading="lazy" alt="shape"
