--- a/AdminPanel/dish/index.html
+++ b/AdminPanel/dish/index.html
@@ -18,7 +18,7 @@
 	<section id="sidebar">
 		<a class="brand">
 			<i class='bx bxs-smile'></i>
-			<span class="text">SMI FOOD</span>
+			<span class="text">SMIT FOOD</span>
 		</a>
 		<ul class="side-menu top">
 			<li >
