--- a/AdminPanel/order_page/index.html
+++ b/AdminPanel/order_page/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+      a{
+        text-decoration: none !important;
+      }
+       body{
+      background-color: bisque;
+      height: 100vh;
+      max-height: 300vh;
+    }
       h6{
         color: goldenrod !important;
       }
@@ -33,10 +42,59 @@
 
 
     </style>
+    <link rel="stylesheet" href="../dish/style.css">
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
-<body style="background-image: url('../../assets/images/hero-slider-2.jpg');background-repeat: no-repeat;">
+<body style="background-image: url('../../assets/images/hero-slider-2.jpg');background-repeat: no-repeat;" class="dark">
     
+
+	<section id="sidebar">
+		<a class="brand">
+			<i class='bx bxs-smile'></i>
+			<span class="text">SMI FOOD</span>
+		</a>
+		<ul class="side-menu top">
+			<li >
+				<a href="../category/index.html">
+					<i class='bx bxs-dashboard' ></i>
+					<span class="text">Add Category</span>
+				</a>
+			</li>
+			<li >
+				<a>
+					<i class='bx bxs-shopping-bag-alt' ></i>
+					<span class="text">Add Dishes</span>
+				</a>
+			</li>
+			<li>
+				<a href="../Payment_History/index.html">
+					<i class='bx bxs-doughnut-chart' ></i>
+					<span class="text">Payment</span>
+				</a>
+			</li>
+			<li class="active">
+				<a href="../order_page/index.html">
+					<i class='bx bxs-message-dots' ></i>
+					<span class="text">Order Page</span>
+				</a>
+			</li>
+			
+		</ul>
+		<ul class="side-menu">
+			
+			<li>
+				<a class="logout" onclick="logout()">
+					<i class='bx bxs-log-out-circle' ></i>
+					<span class="text">Logout</span>
+				</a>
+			</li>
+		</ul>
+	</section>
+
+
+
+
     <h1 class="text-center" style="color: goldenrod;">View All Orders Of users</h1>
     <div.container>
 
@@ -78,6 +136,7 @@
 firebase.initializeApp(firebaseConfig);
     </script>
     <script src="app.js"></script>
+    <script src="./script.js"></script>
 
 </body>
 </html>
