--- a/UserPanel/Order_Details/index.html
+++ b/UserPanel/Order_Details/index.html
@@ -149,7 +149,7 @@
             
             
             <li class="navbar-item">
-              <a href="../User_Order_Status/index.html" class="navbar-link hover-underline">
+              <a href="../User_Order_Status/index.html" class="navbar-link hover-underline active">
                 <div class="separator"></div>
   
                 <span class="span">View Orders</span>
@@ -261,7 +261,7 @@
     </div>
 
     <footer class="footer section has-bg-image text-center"
-    style="background-image: url('./assets/images/footer-bg.jpg')">
+    style="background-image: url('../../assets/images/footer-bg.jpg')">
     <div class="container">
 
       <div class="footer-top grid-list">
