--- a/Auth/index.html
+++ b/Auth/index.html
@@ -19,7 +19,8 @@
 <body>
     
  <div class="wrapper">
-    <nav class="nav">
+     <nav class="nav">
+        <i class='bx bx-arrow-back coloring' style='color:#fff; font-size: 1.5rem;margin-top: 30px;' onclick="window.location.href='../index.html'" ></i>
         <div class="nav-logo">
             <img src="../assets/images/logos.png" alt="" width="200" height="100">
         </div>
@@ -55,13 +56,7 @@
                 <input type="submit" class="submit" value="Sign In" onclick="Login()">
             </div>
             <div class="two-col">
-                <div class="one">
-                    <input type="checkbox" id="login-check">
-                    <label for="login-check"> Remember Me</label>
-                </div>
-                <div class="two">
-                    <label><a >Forgot password?</a></label>
-                </div>
+              
             </div>
         </div>
 
