--- a/UserPanel/Add_to_Cart/index.html
+++ b/UserPanel/Add_to_Cart/index.html
@@ -218,7 +218,7 @@
               <div class="col col-lg-6">
                 
           <button class="btn btn-success" style='font-size:20px;font-weight:bold;width:100%'>
-              <a onclick="window.location.replace('../Order_Now/index.html')">
+              <a onclick="window.location.replace('../Order_Now/index.html')" style="color:white">
               Order Now
           </a></button>
   
