--- a/AdminPanel/order_page/index.html
+++ b/AdminPanel/order_page/index.html
@@ -62,7 +62,7 @@
 				</a>
 			</li>
 			<li >
-				<a>
+				<a href="../dish/index.html">
 					<i class='bx bxs-shopping-bag-alt' ></i>
 					<span class="text">Add Dishes</span>
 				</a>
