--- a/UserPanel/Add_to_Cart/index.html
+++ b/UserPanel/Add_to_Cart/index.html
@@ -335,8 +335,7 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2024 SMIT MART. All Rights Reserved | Crafted by <a href="https://github.com/TayyabXtreme"
-            target="_blank" class="link">tayyabXtrem</a>
+          &copy; 2024.
         </p>
 
       </div>
