--- a/UserPanel/Dishes/index.html
+++ b/UserPanel/Dishes/index.html
@@ -356,8 +356,7 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2024 MUET MART. All Rights Reserved | Crafted by <a href="https://github.com/TayyabXtreme"
-            target="_blank" class="link">Tayyab , Shafaque and Laiba</a>
+          &copy; 2024 SMIT MART.
         </p>
 
       </div>
