--- a/UserPanel/Order_Details/index.html
+++ b/UserPanel/Order_Details/index.html
@@ -345,8 +345,7 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2024 SMIT MART. All Rights Reserved | Crafted by <a href="https://github.com/TayyabXtreme"
-            target="_blank" class="link">Tayyab</a>
+          &copy; 2024 SMIT MART.
         </p>
 
       </div>
