--- a/index.html
+++ b/index.html
@@ -551,8 +551,7 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2024 SMIT FOOD. All Rights Reserved | Crafted by <a href="https://github.com/TayyabXtreme"
-            target="_blank" class="link">Tayyab Xtrem</a>
+          &copy; 2024 SMIT FOOD.
         </p>
 
       </div>
