--- a/UserPanel/Dishes/index.html
+++ b/UserPanel/Dishes/index.html
@@ -9,7 +9,7 @@
   <!-- 
     - primary meta tags
   -->
-  <title>MUET -FOOD - Dishes</title>
+  <title>SMIT -FOOD - Dishes</title>
   <meta name="title" content="MUET-FOOD - Amazing & Delicious Food">
   <meta name="description" content="This is a Restaurant html template made by tayyabXtrem">
 
@@ -47,7 +47,7 @@
 
   <div class="preload" data-preaload>
     <div class="circle"></div>
-    <p class="text">MUET FOOD</p>
+    <p class="text">SMIT FOOD</p>
   </div>
 
 
@@ -284,15 +284,15 @@
           </a>
 
           <address class="body-4">
-            Mehran University of Engineering and Technology, Indus Hwy, Jamshoro, Sindh 76062, Pakistan
+            
           </address>
 
-          <a href="mailto:booking@grilli.com" class="body-4 contact-link">muet:food@gmail.com</a>
+          <a href="mailto:booking@grilli.com" class="body-4 contact-link">smit:food@gmail.com</a>
 
           <a class="body-4 contact-link">Contact : +92 0222772250</a>
 
           <p class="body-4">
-            Open : 09:00 am - 01:00 pm
+            Open : 09:00 am - 12:00 pm
           </p>
 
           <div class="wrapper">
@@ -356,8 +356,8 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2024 MUET MART. All Rights Reserved | Crafted by <a href="https://github.com/TayyabXtreme"
-            target="_blank" class="link">Tayyab , Shafaque and Laiba</a>
+          &copy; 2024 SMIT MART. All Rights Reserved | Crafted by <a href="https://github.com/TayyabXtreme"
+            target="_blank" class="link">Tayyab</a>
         </p>
 
       </div>
